# fastapi-template

./: .dockerignore  .pre-commit-config.yaml  LICENSE  README.md  build.bat  docker-compose.override.yml  docker-compose.yml  full-build.bat  pyproject.toml  rebuild.bat  run.bat
app/: __init__.py
app/api/: __init__.py  app.py  dependencies.py
app/api/endpoints/v1/: __init__.py  index.py  oauth.py  openapi_tags.json  user.py
app/api/frontend/: __init__.py  index.py
app/api/frontend/static/js/: fetch_data.ts  profile.ts
app/api/frontend/templates/base/: v1.html.jinja
app/api/frontend/templates/profile/: v1.html.jinja
app/api/templates/base/: v1.html.jinja
app/api/templates/profile/: v1.html.jinja
app/config/: __init__.py  application_config.py  metadata_config.py  postgres_config.py  redis_config.py
app/core/: __init__.py  gravitar.py  security.py
app/crud/: __init__.py  log.py  role.py  user.py
app/schemas/: __init__.py  token.py  user.py
app/stores/: init.py
app/stores/db/: __init__.py  engine.py  init.py  method.py  method_async.py  util.py
app/stores/db/migrations/V1.0.0/: V1.0.001_trigger.sql  V1.0.002_user.sql  V1.0.003_scope.sql  V1.0.004_log.sql  V1.0.005_test_user.sql  V1.0.007_player_fixture_predicition.sql
app/stores/task_queue/: __init__.py  engine.py  init.py
app/tasks/: worker.py
docker/: .dockerignore  backend.Dockerfile  flower.Dockerfile  init_backend.Dockerfile  worker.Dockerfile
